# Draw3D

./: Cargo.toml  README.md  build.rs  gds3d.desktop  pyproject.toml
.github/workflows/: build-installers.yml  check.yml  release.yml
assets/: icon.icns
crates/gds3d/: Cargo.toml  README.md
crates/gds3d/src/: app.rs  main.rs  model.rs  viewport.rs
i18n/: en.json  zh-CN.json
packaging/: build_app.py  package_installer.py
packaging/windows/: gds3d.iss  package.ps1
src/: app.rs  archive.rs  component_tree.py  export.rs  export_dialog.py  gds_import_dialog.py  gds_loader.py  i18n.py  industrial.qss  main.py  main.rs  main_window.py  mesh_factory.py  model.rs  objects.py  paths.py  pdf_exporter.py  project_archive.py  property_panel.py  scene.py  ui_settings_dialog.py  viewport.py
src/assets/locales/: app.yml
src/ui/: mod.rs  properties.rs
src/viewport/: Cargo.toml
src/viewport/src/: image.rs  lib.rs  math.rs  renderer.rs
src/viewport/src/shaders/: overlay.wgsl  viewport.wgsl
