[package]
name = "gds3d"
version = "0.1.0"
edition = "2024"
description = "A 3D visualization editor for GDS layouts."
license = "MIT"

[package.metadata.bundle]
name = "GDS3D"
identifier = "io.github.kercyding.gds3d"
short_description = "A 3D visualization editor for GDS layouts."
copyright = "Copyright © 2026 KercyDing"
category = "public.app-category.graphics-design"
icon = ["assets/icon.icns", "assets/icon.ico"]

[package.metadata.deb]
depends = "$auto"
assets = [
    ["target/release/gds3d", "usr/bin/", "755"],
    ["assets/icon.png", "usr/share/pixmaps/gds3d.png", "644"],
    ["gds3d.desktop", "usr/share/applications/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gds3d", dest = "/usr/bin/gds3d", mode = "755" },
    { source = "assets/icon.png", dest = "/usr/share/pixmaps/gds3d.png", mode = "644" },
    { source = "gds3d.desktop", dest = "/usr/share/applications/gds3d.desktop", mode = "644" },
]

[workspace]
members = ["src/viewport"]
resolver = "3"

[dependencies]
anyhow = "1"
crc32fast = "1.5"
eframe = { version = "0.35", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
gdsii = "0.2"
gds3d-viewport = { path = "src/viewport" }
flate2 = "1.1"
indexmap = { version = "2", features = ["serde"] }
lucide-icons = "1.22"
printpdf = { version = "0.9", features = ["png"] }
rfd = "0.17"
rust-i18n = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
